--- a/src/main/java/com/offbreach/MainPage.form
+++ b/src/main/java/com/offbreach/MainPage.form
@@ -99,7 +99,7 @@
               </Border>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[200, 200]"/>
+              <Dimension value="[300, 200]"/>
             </Property>
           </Properties>
 
@@ -118,7 +118,7 @@
                 <Property name="alignment" type="int" value="0"/>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jLabel1">
+                <Component class="javax.swing.JLabel" name="dadosServidorTitulo">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Dados do Servidor"/>
                   </Properties>
@@ -136,12 +136,12 @@
                 <Property name="alignment" type="int" value="0"/>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jLabel2">
+                <Component class="javax.swing.JLabel" name="hostnameLabel">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Hostname:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel3">
+                <Component class="javax.swing.JLabel" name="hostnameValue">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="------"/>
                   </Properties>
@@ -159,12 +159,12 @@
                 <Property name="alignment" type="int" value="0"/>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jLabel4">
+                <Component class="javax.swing.JLabel" name="statusLabel">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Status:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel5">
+                <Component class="javax.swing.JLabel" name="statusValue">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="------"/>
                   </Properties>
@@ -182,12 +182,12 @@
                 <Property name="alignment" type="int" value="0"/>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jLabel6">
+                <Component class="javax.swing.JLabel" name="dataInitLabel">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Data de Inicializa&#xe7;&#xe3;o:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel7">
+                <Component class="javax.swing.JLabel" name="dataInitValue">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="--/--/-- --:--"/>
                   </Properties>
@@ -204,7 +204,7 @@
               </Border>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[200, 200]"/>
+              <Dimension value="[300, 200]"/>
             </Property>
           </Properties>
 
@@ -241,12 +241,12 @@
                 <Property name="alignment" type="int" value="0"/>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jLabel10">
+                <Component class="javax.swing.JLabel" name="usoRamLabel">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Uso da Ram:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel11">
+                <Component class="javax.swing.JLabel" name="usoRamValue">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="0%"/>
                   </Properties>
@@ -264,12 +264,12 @@
                 <Property name="alignment" type="int" value="0"/>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jLabel12">
+                <Component class="javax.swing.JLabel" name="usoCpuLabel">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Uso Cpu:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jLabel13">
+                <Component class="javax.swing.JLabel" name="usoCpuValue">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="0%"/>
                   </Properties>
@@ -287,9 +287,14 @@
                 <Property name="alignment" type="int" value="0"/>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JLabel" name="jLabel14">
+                <Component class="javax.swing.JLabel" name="usoDiscoLabel">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Uso Discos: 0%"/>
+                    <Property name="text" type="java.lang.String" value="Uso Discos:"/>
+                  </Properties>
+                </Component>
+                <Component class="javax.swing.JLabel" name="usoDiscoValue">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="0"/>
                   </Properties>
                 </Component>
               </SubComponents>
